dropshot/tests/fail/bad_trait_only22.stderr
error: missing field `url`
  --> tests/fail/bad_trait_only22.rs:16:33
   |
16 |                 external_docs = {}
   |                                 ^^

error[E0433]: failed to resolve: use of undeclared crate or module `my_api`
  --> tests/fail/bad_trait_only22.rs:35:5
   |
35 |     my_api::api_description::<MyImpl>();
   |     ^^^^^^ use of undeclared crate or module `my_api`

error[E0433]: failed to resolve: use of undeclared crate or module `my_api`
  --> tests/fail/bad_trait_only22.rs:36:5
   |
36 |     my_api::stub_api_description();
   |     ^^^^^^ use of undeclared crate or module `my_api`
